--- a/unit-3/137-CA-03.tex
+++ b/unit-3/137-CA-03.tex
@@ -69,15 +69,28 @@
 
 \newcommand{\smallerfont}{\setsize{13}} %place this at the beginning of a slide to set the font size of the entire slide to 13.
 
+
+\setbeamertemplate{enumerate items}{(\Alph{enumi})}
+
+
 %===========================
 
 %===================================================
 \begin{document}
 %===================================================
 
-%----------------------------------------------------------------------------------------
-%	DERIVATIVE AS SLOPE
-%----------------------------------------------------------------------------------------
+
+\begin{frame}
+	\frametitle{MAT137 Lecture 17 --- Definition of Derivative}
+
+	\vfill
+	{\bf Before next class:}
+		\begin{itemize} \normalsize
+			\item {\bf Watch videos 3.4, 3.5, 3.8 }
+		\end{itemize}
+\end{frame}
+
+
 %-----------------------------
 \begin{frame}[t]
 \frametitle{Tangent line to a line?}
@@ -119,7 +132,17 @@ Let $P$ be a point in $C$.
 %-----------------------------
 \begin{frame}[t]
 \frametitle{Tangent line from a graph}
-This is the graph of the function $f$.  Write the equation of the line tangent to it at the point with $x$--coordinate $-2$.
+	This is the graph of the function $f$.  Write the (approximate)
+	equation of the line tangent to it at the point with $x$--coordinate $-2$.
+\begin{center}
+\includegraphics[scale=.4]{G4}
+\end{center}
+
+\end{frame}
+\begin{frame}[t]
+\frametitle{Tangent line from a graph}
+	This is the graph of the function $f$.  Write the (approximate)
+	equation of the line tangent to it at the point with $x$--coordinate $-1$.
 \begin{center}
 \includegraphics[scale=.4]{G4}
 \end{center}
@@ -135,24 +158,100 @@ Sketch the graph of its derivative $f'$.
 \end{center}
 
 \end{frame}
-
-%-----------------------------
-
 \begin{frame}[t]
-\frametitle{From the derivative to the function}
+\frametitle{Derivatives from the definition}
 
-\begin{enumerate}
-	\item Sketch the graph of a continuous function with domain $\R$, whose derivative has the graph below.
-	\item Sketch the graph of a non-continuous function whose derivative has the graph below.
-\end{enumerate}
-
-\begin{center}
-	\includegraphics[scale=.3]{G5}
-\end{center}
+Let 
+	$$g(x) = \frac{2}{\sqrt{x}} $$
+	
+Calculate \DS{g'(4)} directly from the definition of derivative as a limit.
 
 \end{frame}
 
 %-----------------------------
+
+
+
+\begin{frame}
+	\frametitle{MAT137 Lecture 18 --- Differentiation Rules}
+
+	\vfill
+	{\bf Before next class:}
+		\begin{itemize} \normalsize
+			\item {\bf Watch videos 3.6, 3.7, 3.9 }
+		\end{itemize}
+\end{frame}
+
+\begin{frame}[t]
+\frametitle{Differentiable functions}
+
+Let $a \in \R$.  \\
+Let $f$ be a function with domain $\R$.  \\
+Assume $f$ is differentiable everywhere.  \\
+What can we conclude?
+
+\begin{multicols}{2}
+\begin{enumerate}
+	\item  $f(a)$ is defined.
+	\item \DS{\lim_{x \to a} f(x)} exists.
+	\item  $f$ is continuous at $a$.
+	\item  $f'(a)$ exists.
+	\item  \DS{\lim_{x \to a} f'(x)} exists.
+	\item  \DS{f'} is continuous at $a$.
+\end{enumerate}
+\end{multicols}
+ 
+\end{frame}
+
+\begin{frame}
+\frametitle{Computations: Basic differentiation rules}
+
+Compute the derivative of the following functions:
+
+\
+\begin{multicols}{2}
+\begin{enumerate}
+	\item  \DS{f(x) = x^{100} - 3x^{9} - 2}
+
+\
+
+	\item  \DS{f(x) = \sqrt[3]{x} + 6}
+
+\
+
+	\item  \DS{f(x) = \frac{4}{x^4}}
+
+\
+
+	\item  \DS{f(x) = \sqrt{x} \left( 1 + 2x \right)}
+
+\
+
+	\item  \DS{f(x) = \frac{x^6+ 1}{x^3}}
+
+\
+
+	\item  \DS{f(x) = \frac{x^2-2}{x^2+2}}
+\end{enumerate}
+\end{multicols}
+
+\end{frame}
+
+\begin{frame}[t]
+\frametitle{Higher order derivatives}
+
+
+Let \DS{g(x) = \frac{1}{x^3}}.
+
+\
+
+\begin{itemize}
+	\item Calculate the first few derivatives.  
+	\item Make a conjecture for a formula for  the $n$-th derivative \DS{g^{(n)}(x)}.
+	\item  Prove it by induction.
+\end{itemize}
+
+\end{frame}
 
 \begin{frame}
 \frametitle{Estimations - 1}
@@ -227,175 +326,36 @@ Without using a calculator, estimate \DS{\sqrt[20]{1.01}} as well as you can.
  
 \end{frame}
 
-%-----------------------------
-%  Derivative from the definition
-%-----------------------------
-%-----------------------------
-\begin{frame}[t]
-\frametitle{Derivatives from the definition}
 
-Let 
-	$$g(x) = \frac{2}{\sqrt{x}} $$
-	
-Calculate \DS{g'(4)} directly from the definition of derivative as a limit.
 
-\end{frame}
 
-%-----------------------------
-% Derivative as rate of change
-%-----------------------------
-%-----------------------------
 
-\begin{frame}
-\frametitle{Bella}
 
-The graph below describes Bella's distance from home one morning as she drives drive between her home and school.\\
 
-Describe a possible scenario for her travels that morning. \\
-Then sketch the corresponding graph of his velocity.
 
-\begin{center}
-\includegraphics[width=0.7\textwidth]{G9}
-\end{center}
 
-\end{frame}
 
-%-----------------------------
+
+
+
+
+
+
+
+
+
 
 \begin{frame}
-\frametitle{Edward and Jacob}
+	\frametitle{MAT137 Lecture 19 --- Proof of Differentiation Rules}
 
-Jacob walked at 5 km/h for 20 minutes and then sprinted at 15 km/h for 8 minutes.
-\begin{enumerate}
-\item How fast would Edward have to walk or run to go the same distance as Jacob did in the same time while moving at a constant speed? 
-\item Sketch a graph of Jacob's and Edward's positions over time on the same set of axes.
-\end{enumerate}
-
+	\vfill
+	{\bf Before next class:}
+		\begin{itemize} \normalsize
+			\item {\bf Watch videos 3.10, 3.11 }
+		\end{itemize}
 \end{frame}
 
-%-----------------------------
-%  Computations
-%-----------------------------
-%-----------------------------
-\begin{frame}
-\frametitle{Computations: Basic differentiation rules}
 
-Compute the derivative of the following functions:
-
-\
-\begin{multicols}{2}
-\begin{enumerate}
-	\item  \DS{f(x) = x^{100} - 3x^{9} - 2}
-
-\
-
-	\item  \DS{f(x) = \sqrt[3]{x} + 6}
-
-\
-
-	\item  \DS{f(x) = \frac{4}{x^4}}
-
-\
-
-	\item  \DS{f(x) = \sqrt{x} \left( 1 + 2x \right)}
-
-\
-
-	\item  \DS{f(x) = \frac{x^6+ 1}{x^3}}
-
-\
-
-	\item  \DS{f(x) = \frac{x^2-2}{x^2+2}}
-\end{enumerate}
-\end{multicols}
-
-\end{frame}
-
-%-----------------------------
-\begin{frame}[t]
-\frametitle{Computations: Chain rule}
-
-Compute the derivative of 
-
-\
-
-\begin{enumerate}
-	\item  \DS{f(x) = \left( 2x^2+x+1 \right)^{8} }
-
-
-\
-	
-	\item \DS{f(x) = \frac{1}{\left( x + \sqrt{x^2+x}  \right)^{137}}  }
-
-\end{enumerate}
-
-\end{frame}
-%-----------------------------
-\begin{frame}[t]
-\frametitle{A long chain}
-
-The function below has 137 square roots:
-	$$
-		f(x) = \sqrt{x+ \sqrt{x + \sqrt{x + \sqrt{x+ \ldots + \sqrt{x + \sqrt{x+1}}}}}}
-	$$
-
-Find the equation of the line tangent to the graph of $f$ at the point with $x$-coordinate $0$.
-\end{frame}
-
-%-----------------------------
-
-\begin{frame}[t]
-\frametitle{Computations: Trig derivatives}
-
-
-Compute the derivatives of the following functions:
-
-\
-\begin{enumerate}
-%	\item  \DS{f(x) = x \sin x}
-	\item  \DS{f(x) = \tan (3x^2+1)}
-
-\vfill
-	\item  \DS{f(x) = (\cos x )( \sin 2x )(\tan 3x)}
-
-\vfill
-	\item  \DS{f(x) = \cos ( \sin( \tan x))}
-\vfill
-	\item  \DS{f(x) = \cos \left( 3x + \sqrt{1 + \sin^2 x^2 } \right)}
-\vfill
-%	\item  \DS{f(x) = \frac{x + \sin x}{x + \cos x}}
-\end{enumerate}
-
-
-\end{frame}
-
-%-----------------------------
-%  Differentiation rules
-%-----------------------------
-%-----------------------------
-
-\begin{frame}[t]
-\frametitle{Differentiable functions}
-
-Let $a \in \R$.  \\
-Let $f$ be a function with domain $\R$.  \\
-Assume $f$ is differentiable everywhere.  \\
-What can we conclude?
-
-\begin{multicols}{2}
-\begin{enumerate}
-	\item  $f(a)$ is defined.
-	\item \DS{\lim_{x \to a} f(x)} exists.
-	\item  $f$ is continuous at $a$.
-	\item  $f'(a)$ exists.
-	\item  \DS{\lim_{x \to a} f'(x)} exists.
-	\item  \DS{f'} is continuous at $a$.
-\end{enumerate}
-\end{multicols}
- 
-\end{frame}
-
-%-----------------------------
 \begin{frame}[t]
 \smallerfont
 \frametitle{True or False - Differentiability vs Continuity}
@@ -447,19 +407,6 @@ Which of these implications are true?
  
 \end{frame}
 
-%-----------------------------
-
-\begin{frame}[t]
-\frametitle{Vertical things}
-
-\begin{itemize}
-	\item Construct a function $f$ that has a \rojo{vertical asymptote} at $x=2$.
-	\item Construct a function $g$ that has a \azul{vertical tangent line} at $x=2$.
-\end{itemize}
-
-\end{frame}
-
-%-----------------------------
 
 \begin{frame}[t]
 \frametitle{Absolute value and tangent lines}
@@ -481,7 +428,7 @@ At (0,0) the graph of \DS{y=|x|}...
 
 %-----------------------------
 \begin{frame}[t]
-\frametitle{Absolute value and derivatives - 1}
+\frametitle{Absolute value and derivatives}
 
 	Let $h(x) = x|x|$.  What is $h'(0)$?
 
@@ -496,18 +443,6 @@ At (0,0) the graph of \DS{y=|x|}...
 
 
 \end{frame}
-
-%-----------------------------
-\begin{frame}[t]
-\frametitle{Absolute value and derivatives - 2}
-
-\begin{block}{True or False?}
-For all $n \in \Z$ and all $x$, $\frac{d}{dx}|x|^n=nx|x|^{n-2}$.
-
-\end{block}
-\end{frame}
-
-%-----------------------------
 
 \begin{frame}[t]
 \smallerfont
@@ -579,55 +514,37 @@ If you answered ``no" to Q\ref{qu:cont}, you probably missed something important
 	\end{align*}
 \end{frame}
 
-%-----------------------------
-%  HIGHER ORDER DERIVATIVES
-%-----------------------------
-%-----------------------------
-
-\begin{frame}[t]
-\frametitle{Higher order derivatives}
 
 
-Let \DS{g(x) = \frac{1}{x^3}}.
 
-\
 
-\begin{itemize}
-	\item Calculate the first few derivatives.  
-	\item Make a conjecture for a formula for  the $n$-th derivative \DS{g^{(n)}(x)}.
-	\item  Prove it by induction.
-\end{itemize}
 
-\end{frame}
 
-%-----------------------------
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 \begin{frame}
-\frametitle{Nixon}
+	\frametitle{MAT137 Lecture 20 --- The Chain Rule}
 
-
-Richard Nixon, during the 1972 US Presidential campaign, (paraphrased):
-
-\
-\begin{quote}
-\emph{Inflation is increasing, but the rate of increase of inflation is decreasing.}
-\end{quote}
-
-\vfill
-
-Let 
-	\begin{itemize}
-		\item $C$ = cost of life
-		\item  $t$ = time
-	\end{itemize}
-What did Nixon say in terms of derivatives?
-
-\vfill
-
+	\vfill
+	{\bf Before next class:}
+		\begin{itemize} \normalsize
+			\item {\bf Watch videos 3.12, 3.13 }
+		\end{itemize}
 \end{frame}
-%-----------------------------
-%  CHAIN RULE
-%-----------------------------
-%------------------------------
+
+
 \begin{frame}
 \frametitle{Quick composition}
 
@@ -666,6 +583,234 @@ What can we conclude?
  
 \end{frame}
 %-----------------------------
+
+\begin{frame}[t]
+\frametitle{Computations: Chain rule}
+
+Compute the derivative of 
+
+\
+
+\begin{enumerate}
+	\item  \DS{f(x) = \left( 2x^2+x+1 \right)^{8} }
+
+
+\
+	
+	\item \DS{f(x) = \frac{1}{\left( x + \sqrt{x^2+x}  \right)^{137}}  }
+
+\end{enumerate}
+
+\end{frame}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+\begin{frame}
+	\frametitle{MAT137 Lecture 21 --- Trig Derivatives and Implicit Differentiation}
+
+	\vfill
+	{\bf Before next class:}
+		\begin{itemize} \normalsize
+			\item {\bf Watch videos 4.1, 4.2 }
+		\end{itemize}
+\end{frame}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+%----------------------------------------------------------------------------------------
+%	DERIVATIVE AS SLOPE
+%----------------------------------------------------------------------------------------
+
+\begin{frame}[t]
+\frametitle{From the derivative to the function}
+
+\begin{enumerate}
+	\item Sketch the graph of a continuous function with domain $\R$, whose derivative has the graph below.
+	\item Sketch the graph of a non-continuous function whose derivative has the graph below.
+\end{enumerate}
+
+\begin{center}
+	\includegraphics[scale=.3]{G5}
+\end{center}
+
+\end{frame}
+
+%-----------------------------
+
+
+%-----------------------------
+%  Derivative from the definition
+%-----------------------------
+%-----------------------------
+
+%-----------------------------
+% Derivative as rate of change
+%-----------------------------
+%-----------------------------
+
+\begin{frame}
+\frametitle{Bella}
+
+The graph below describes Bella's distance from home one morning as she drives drive between her home and school.\\
+
+Describe a possible scenario for her travels that morning. \\
+Then sketch the corresponding graph of his velocity.
+
+\begin{center}
+\includegraphics[width=0.7\textwidth]{G9}
+\end{center}
+
+\end{frame}
+
+%-----------------------------
+
+\begin{frame}
+\frametitle{Edward and Jacob}
+
+Jacob walked at 5 km/h for 20 minutes and then sprinted at 15 km/h for 8 minutes.
+\begin{enumerate}
+\item How fast would Edward have to walk or run to go the same distance as Jacob did in the same time while moving at a constant speed? 
+\item Sketch a graph of Jacob's and Edward's positions over time on the same set of axes.
+\end{enumerate}
+
+\end{frame}
+
+%-----------------------------
+%  Computations
+%-----------------------------
+%-----------------------------
+%-----------------------------
+%-----------------------------
+\begin{frame}[t]
+\frametitle{A long chain}
+
+The function below has 137 square roots:
+	$$
+		f(x) = \sqrt{x+ \sqrt{x + \sqrt{x + \sqrt{x+ \ldots + \sqrt{x + \sqrt{x+1}}}}}}
+	$$
+
+Find the equation of the line tangent to the graph of $f$ at the point with $x$-coordinate $0$.
+\end{frame}
+
+%-----------------------------
+
+\begin{frame}[t]
+\frametitle{Computations: Trig derivatives}
+
+
+Compute the derivatives of the following functions:
+
+\
+\begin{enumerate}
+%	\item  \DS{f(x) = x \sin x}
+	\item  \DS{f(x) = \tan (3x^2+1)}
+
+\vfill
+	\item  \DS{f(x) = (\cos x )( \sin 2x )(\tan 3x)}
+
+\vfill
+	\item  \DS{f(x) = \cos ( \sin( \tan x))}
+\vfill
+	\item  \DS{f(x) = \cos \left( 3x + \sqrt{1 + \sin^2 x^2 } \right)}
+\vfill
+%	\item  \DS{f(x) = \frac{x + \sin x}{x + \cos x}}
+\end{enumerate}
+
+
+\end{frame}
+
+%-----------------------------
+%  Differentiation rules
+%-----------------------------
+%-----------------------------
+
+
+%-----------------------------
+%-----------------------------
+
+\begin{frame}[t]
+\frametitle{Vertical things}
+
+\begin{itemize}
+	\item Construct a function $f$ that has a \rojo{vertical asymptote} at $x=2$.
+	\item Construct a function $g$ that has a \azul{vertical tangent line} at $x=2$.
+\end{itemize}
+
+\end{frame}
+
+%-----------------------------
+
+
+%-----------------------------
+\begin{frame}[t]
+\frametitle{Absolute value and derivatives - 2}
+
+\begin{block}{True or False?}
+For all $n \in \Z$ and all $x$, $\frac{d}{dx}|x|^n=nx|x|^{n-2}$.
+
+\end{block}
+\end{frame}
+
+%-----------------------------
+
+%-----------------------------
+%  HIGHER ORDER DERIVATIVES
+%-----------------------------
+%-----------------------------
+
+%-----------------------------
+\begin{frame}
+\frametitle{Nixon}
+
+
+Richard Nixon, during the 1972 US Presidential campaign, (paraphrased):
+
+\
+\begin{quote}
+\emph{Inflation is increasing, but the rate of increase of inflation is decreasing.}
+\end{quote}
+
+\vfill
+
+Let 
+	\begin{itemize}
+		\item $C$ = cost of life
+		\item  $t$ = time
+	\end{itemize}
+What did Nixon say in terms of derivatives?
+
+\vfill
+
+\end{frame}
+%-----------------------------
+%  CHAIN RULE
+%-----------------------------
+%------------------------------
 
 \begin{frame}
 \frametitle{Chain rule from a graph}
